@@ -1,3 +1,7 @@
+2011-04-04  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with loans not being updated for removed entries (Bug 270129).
+
 2011-03-21  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed crashing bug for editing some values (Bug 269044).
